--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -13,15 +13,12 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black}
 }
-\usepackage[utf8]{inputenc}
+\usepackage[scaled]{helvet}
 \usepackage[T1]{fontenc}
 \usepackage[margin=0.9in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
-\usepackage{inconsolata}
-
-
 
 \usepackage{marvosym}
 \usepackage{fontawesome}
@@ -31,6 +28,8 @@
 \usepackage{xhfill}
 
 \def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
+
+\renewcommand\familydefault{\sfdefault}
 
 \renewcommand{\hrulefill}{%
   \leavevmode\leaders\hrule height 0.3pt\hfill\kern0pt }
@@ -85,7 +84,7 @@
 % END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
 \setlist[itemize]{noitemsep, nolistsep,leftmargin=1.5em}
 \begin{document}
-\vspace*{-40pt}
+\vspace*{-50pt}
 \fontsize{10.5}{12}\selectfont
 
 
