--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -7,6 +7,7 @@
 \usepackage{mathptmx}
 \usepackage{hyperref}
 \usepackage{xcolor}
+
 \hypersetup{
     colorlinks,
     linkcolor=blue,
@@ -92,7 +93,7 @@
 \vspace*{1mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Big|$  \Mobilefone\space (806) 317-7937 $\Big|$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\Big|$ Frisco, Texas \\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\blacklozenge$  \Mobilefone\space (806) 317-7937 $\blacklozenge$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\blacklozenge$ Frisco, Texas \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
