--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -103,7 +103,7 @@
 \vspace*{-2mm}
 \header{Work and Research Experience} \\
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
-\textit{Sales and Marketing Analyst} \hfill  \emph{May 2023 --- Present} \\
+\textit{Sales and Marketing Analyst \& Salesforce Admin} \hfill  \emph{May 2023 --- Present} \\
 \begin{itemize}
     \item Assisting in implementing Salesforce development, UAT, and production environments (Salesforce CRM, Marketing Cloud, Sales Cloud) 
     \item Querying relational databases to validate and clean for migration into Salesforce (SQL, Python)
@@ -114,9 +114,9 @@
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
-    \item Troubleshooted automated workflows and forms processes
-    \item Maintained non-clustered SQL databases
-    \item Administered folder-, document-, and user-level security
+    \item Troubleshooted Laserfiche automated workflows, quick fields, and forms processes
+    \item Maintained non-clustered SQL relational databases
+    \item Administered folder-, document-, and user-level security using admin consoles and AD
     \item Served as internal IT support
 \end{itemize}    
 \vspace{1mm}
@@ -152,15 +152,15 @@
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
     \item Collected and analyzed TIMSS and PISA datasets related to national education policy
-    \item Wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education
-    \item Produced over 200 social media posts on HumanProgress.org
+    \item Wrote Capitol Hill report summaries regarding foreign affairs, trade, monetary, and education
+    \item Produced over 200 Twitter/X posts on @HumanProgress
 \end{itemize}
 \vspace{1mm}
 
 %==== Education ====%
 \header{Education} \\
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics}; 3.6 GPA \hfill  \emph{May 2022} \\
+\textit{M.S. Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
@@ -180,9 +180,9 @@
 %==== Certificates ====%
 \header{Certifications and Exams} \\
 \begin{itemize}
-    \item \textbf{Applied Data Science with Python} (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - Specialization (5 courses) \hfill \emph{Aug 2023}
-    \item \textbf{Django for Everybody} (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
-    \item Passed SOA \textbf{Exam P} \hfill \emph{May 2023}
+    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - Specialization (5 courses) \hfill \emph{Aug 2023}
+    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
+    \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
 \vspace{1mm}
