--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -115,7 +115,7 @@
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
-    \item Troubleshooted Laserfiche automated workflows, quick fields, and forms processes
+    \item Troubleshooted and built Laserfiche automated Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL relational databases
     \item Administered folder-, document-, and user-level security using admin consoles and active directory
     \item Served as internal IT support
