--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -16,12 +16,13 @@
     urlcolor=blue
 }
 
-\usepackage[margin=0.9in]{geometry}
+\usepackage[margin=0.85in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
 
 \renewcommand{\labelitemi}{$\circ$}
+\renewcommand{\labelitemii}{$\triangleright$}
 
 \usepackage{marvosym}
 \usepackage{fontawesome}
@@ -89,7 +90,7 @@
 \setlist[itemize]{noitemsep, nolistsep,leftmargin=1.5em}
 \begin{document}
 \vspace*{-50pt}
-\fontsize{10.5}{12}\selectfont
+\fontsize{11}{11.5}\selectfont
 
 
 %==== Profile ====%
@@ -99,7 +100,7 @@
     \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\blacklozenge$  \Mobilefone\space (806) 317-7937 $\blacklozenge$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\blacklozenge$ Frisco, Texas \\
 \end{center}
 %==== Experience ====%
-\vspace*{-1mm}
+\vspace*{-2mm}
 
 \header{Work and Research Experience} \\
 \vspace{1mm}
@@ -165,7 +166,10 @@
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
 \begin{itemize}
-    \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
+    \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I, Applied Econometrics II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
+    \begin{itemize}
+        \item Tools used: R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+    \end{itemize}
 \end{itemize}
 \vspace{1mm}
 
@@ -185,8 +189,14 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
-    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - Specialization (5 courses) \hfill \emph{Aug 2023}
+    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
+    \begin{itemize}
+        \item Tools used: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
+    \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
+    \begin{itemize}
+        \item Tools used: Django, SQLite, HTML5, CSS, JavaScript, Bash
+    \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
 \end{itemize}
@@ -196,7 +206,6 @@
 
 \header{Skills} \\
 \vspace{1mm}
-Technical: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx), R (dplyr, tidyr, stringr, ggplot2), HTML5, CSS, \LaTeX, SQL \\
 
 Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
 
