--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -89,7 +89,7 @@
 % END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
 \setlist[itemize]{noitemsep, nolistsep,leftmargin=1.5em}
 \begin{document}
-\vspace*{-50pt}
+\vspace*{-45pt}
 \fontsize{11}{11.5}\selectfont
 
 
@@ -169,6 +169,7 @@
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I, Applied Econometrics II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
         \item Tools used: R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+        \item Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
@@ -192,6 +193,7 @@
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
     \begin{itemize}
         \item Tools used: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
+        \item ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
@@ -204,11 +206,7 @@
 
 %==== Skills ====%
 
-\header{Skills} \\
-\vspace{1mm}
-
-Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
-
-ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
+% \header{Skills} \\
+% \vspace{1mm}
 
 \end{document}
