--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -150,7 +150,7 @@
 \end{itemize}
 \vspace{1mm}
 
-\textbf{Cato Institute} \hfill Washington, D.C.\\
+\textbf{Cato Institute} \hfill Washington, DC\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
     \item Collected and analyzed TIMSS and PISA datasets related to national education policy
