--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -97,7 +97,7 @@
 \vspace*{1mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\blacklozenge$  \Mobilefone\space (806) 317-7937 $\blacklozenge$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\blacklozenge$ Frisco, Texas \\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Diamond$  \Mobilefone\space (806) 317-7937 $\Diamond$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\Diamond$ \faMapMarker\space Frisco, Texas \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
@@ -168,7 +168,7 @@
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I, Applied Econometrics II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
-        \item Tools used: R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+        \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
         \item Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
     \end{itemize}
 \end{itemize}
@@ -192,12 +192,12 @@
 \begin{itemize}
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
     \begin{itemize}
-        \item Tools used: Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
+        \item \textbf{Tools used:} Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
         \item ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
-        \item Tools used: Django, SQLite, HTML5, CSS, JavaScript, Bash
+        \item \textbf{Tools used:} Django, SQLite, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed SOA Exam P \hfill \emph{May 2023}
     \item Introduction to SQL (\href{https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill  \emph{Dec 2021}
