--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -8,6 +8,8 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 
+\usepackage{pifont}
+
 \hypersetup{%
     colorlinks=true,
     linkcolor=blue,
@@ -97,7 +99,7 @@
 \vspace*{1mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} $\Diamond$  \Mobilefone\space (806) 317-7937 $\Diamond$ \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} $\Diamond$ \faMapMarker\space Frisco, Texas \\
+    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} \ding{118} \Mobilefone\space (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} \ding{118} \faMapMarker\space Frisco, Texas \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
