--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -128,7 +128,7 @@
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
-    \item Edited and revised book chapters and journal articles; compiled relevant literature for journal articles
+    \item Compiled relevant literature for, revised, and edited book chapters and journal articles
 \end{itemize}
 \vspace{1mm}
 
@@ -171,7 +171,7 @@
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I, Applied Econometrics II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
         \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
-        \item Statistical: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
+        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
@@ -195,7 +195,7 @@
     \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
     \begin{itemize}
         \item \textbf{Tools used:} Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
-        \item ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
+        \item \textbf{ML models:} Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
     \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
