--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -119,8 +119,8 @@
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted and built Laserfiche automated Workflow, Quick Fields, and Form processes
-    \item Maintained non-clustered SQL relational databases
-    \item Administered folder-, document-, and user-level security using admin consoles and active directory
+    \item Maintained non-clustered SQL relational databases (querying tables, SSL certs, TLS config, etc.)
+    \item Configured folder-, document-, and user-level security using admin consoles and active directory
     \item Served as internal IT support
 \end{itemize}    
 \vspace{1mm}
@@ -147,8 +147,8 @@
 \textit{Research Fellow} \hfill  \emph{Jan 2017 --- May 2017}\\
 \begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two publications per week related to the Pennsylvania's budget and education policy
-    \item Responded to daily email inquiries related to subsidies, right-to-work laws, and the state budget
+    \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
+    \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
 \end{itemize}
 \vspace{1mm}
 
@@ -168,10 +168,10 @@
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
 \begin{itemize}
-    \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I, Applied Econometrics II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
+    \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
         \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
-        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
+        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
@@ -192,12 +192,12 @@
 \header{Certifications and Exams} \\
 \vspace{1mm}
 \begin{itemize}
-    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) \hfill \emph{Aug 2023}
+    \item Applied Data Science with Python (\href{https://www.coursera.org/account/accomplishments/specialization/9E4EZST8HHFE}{9E4EZST8HHFE}) - \emph{Coursera} (5 courses) \hfill \emph{Aug 2023}
     \begin{itemize}
         \item \textbf{Tools used:} Python (regex, numpy, pandas, scikit-learn, matplotlib, seaborn, nltk, networkx)
-        \item \textbf{ML models:} Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
+        \item \textbf{ML models:} Gradient descent, random forest, decision tree, SVC, linear and logistic regression, lasso, KNN, na\"{i}ve Bayes, clustering
     \end{itemize}
-    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - Specialization (4 courses) \hfill \emph{Jul 2023}
+    \item Django for Everybody (\href{https://www.coursera.org/account/accomplishments/specialization/SVTRKEJV62T6}{SVTRKEJV62T6}) - \emph{Coursera} (4 courses) \hfill \emph{Jul 2023}
     \begin{itemize}
         \item \textbf{Tools used:} Django, SQLite, HTML5, CSS, JavaScript, Bash
     \end{itemize}
