--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -119,7 +119,7 @@
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted and built Laserfiche automated Workflow, Quick Fields, and Form processes
-    \item Maintained non-clustered SQL relational databases (querying tables, SSL certs, TLS config, etc.)
+    \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config, etc.)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
     \item Served as internal IT support
 \end{itemize}    
@@ -133,7 +133,7 @@
 \vspace{1mm}
 
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{E.C. Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
+\textit{EC Harwood Visiting Research Fellow} \hfill  \emph{Dec 2018 --- May 2019}\\
 \vspace{1mm}
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
@@ -166,7 +166,7 @@
 \header{Education} \\
 \vspace{1mm}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{M.S. Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
+\textit{MS Agricultural and Applied Economics; 3.6 GPA} \hfill  \emph{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
@@ -177,14 +177,14 @@
 \vspace{1mm}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
-\textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
+\textit{MA Political Science, Philosophy, and Economics (PPE)} \hfill  \emph{Jun 2019}\\
 \begin{itemize}
     \item Recipient of Full Tuition for Excellence Scholarship
 \end{itemize}
 \vspace{1mm}
 
 \textbf{University of Michigan College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
-\textit{B.A. General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
+\textit{BA General Studies (Political Science, Philosophy, and History)} \hfill  \emph{Apr 2016}\\
 
 \vspace{1mm}
 %==== Certificates ====%
