--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -18,7 +18,7 @@
     urlcolor=blue
 }
 
-\usepackage[margin=0.85in]{geometry}
+\usepackage[margin=0.825in]{geometry}
 \textheight=10in
 \pagestyle{empty}
 \raggedright
@@ -118,7 +118,7 @@
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
-    \item Troubleshooted and built Laserfiche automated Workflow, Quick Fields, and Form processes
+    \item Troubleshooted, built, and tested Laserfiche automated Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config, etc.)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
     \item Served as internal IT support
@@ -128,7 +128,7 @@
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \emph{Aug 2020 --- May 2022} \\
 \begin{itemize}
-    \item Compiled relevant literature for, revised, and edited book chapters and journal articles
+    \item Investigated relevant literature for, revised, and edited book chapters and journal articles
 \end{itemize}
 \vspace{1mm}
 
@@ -139,7 +139,7 @@
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \emph{Sep 2018 --- Dec 2018}\\
 \begin{itemize}
-    \item Researched master's thesis: economic analysis of open-source communities
+    \item Researched and presented master's thesis: economic analysis of open-source communities
 \end{itemize}
 \vspace{1mm}
 
@@ -155,8 +155,8 @@
 \textbf{Cato Institute} \hfill Washington, DC\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill \emph{Sep 2016 --- Dec 2016}\\
 \begin{itemize}
-    \item Collected and analyzed TIMSS and PISA datasets related to national education policy
-    \item Wrote Capitol Hill report summaries regarding foreign affairs, trade, monetary, and education
+    \item Compiled and examined TIMSS and PISA datasets related to national education policy
+    \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
     \item Produced over 200 Twitter/X posts on @HumanProgress
 \end{itemize}
 \vspace{1mm}
@@ -171,7 +171,7 @@
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
         \item \textbf{Tools used:} R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
-        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit
+        \item \textbf{Statistical methods:} OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
 \vspace{1mm}
