--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -36,7 +36,8 @@
 \def\bull{\vrule height 0.8ex width .7ex depth -.1ex }
 
 \usepackage[T1]{fontenc}
-\usepackage[scaled]{helvet}
+\usepackage[utf8]{inputenc}
+\usepackage[scaled=0.86]{helvet}
 \renewcommand\familydefault{\sfdefault}
 
 \renewcommand{\hrulefill}{%
@@ -121,7 +122,7 @@
     \item Troubleshooted, built, and tested Laserfiche automated Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config, etc.)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
-    \item Served as internal IT support
+    \item Administered internal IT support
 \end{itemize}    
 \vspace{1mm}
 
