--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -24,7 +24,7 @@
 \raggedright
 
 \renewcommand{\labelitemi}{$\circ$}
-\renewcommand{\labelitemii}{$\triangleright$}
+\renewcommand{\labelitemii}{$\circ$}
 
 \usepackage{marvosym}
 \usepackage{fontawesome}
@@ -100,7 +100,7 @@
 \vspace*{1mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1mm}
-    \href{mailto:lim.don93@gmail.com}{\Letter\space lim.don93@gmail.com} \ding{118} \Mobilefone\space (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{\faGlobe\space donlim93.github.io} \ding{118} \faMapMarker\space Frisco, Texas \\
+    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
