--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -120,7 +120,7 @@
 \textit{Support Engineer} \hfill  \emph{June 2022 --- May 2023} \\
 \begin{itemize}
     \item Troubleshooted, built, and tested Laserfiche automated Workflow, Quick Fields, and Form processes
-    \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config, etc.)
+    \item Maintained non-clustered SQL servers (stored procedures, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
     \item Administered internal IT support
 \end{itemize}    
